# miz

./: .gitignore  Cargo.toml  PLAN-images.md  PLAN-split-db.md  PLAN.md  README.md  REVIEW-images-final.md  REVIEW-images-phase1.md  REVIEW-images-phase2.md  REVIEW-images-phase3.md
.github/workflows/: ci.yml  release.yml
crates/miz/: Cargo.toml  build.rs
crates/miz-config/: Cargo.toml
crates/miz-config/src/: lib.rs
crates/miz-convert/: Cargo.toml
crates/miz-convert/src/: main.rs
crates/miz-core/: Cargo.toml
crates/miz-core/src/: config.rs  lib.rs  params.rs
crates/miz-core/src/common/: fmt.rs  progress.rs  report.rs  transaction.rs
crates/miz-core/src/operations/: deptest.rs  files.rs  query.rs  remove.rs  sync.rs  version.rs
crates/miz-core/src/operations/images/: format.rs  job.rs  mod.rs  relay.rs
crates/miz-core/tests/fixtures/image_db/10-archetype/foo-1.2.3-1/: desc
crates/miz-core/tests/fixtures/image_db/50-extra/baz-2.0-3/: desc
crates/miz-core/tests/fixtures/image_db/50-extra/broken-1-1/: desc
crates/miz/examples/: miz.toml
crates/miz/src/: config.rs  error.rs  main.rs  miz_config.rs  style.rs
crates/miz/src/cli/: args.rs  mod.rs
crates/miz/src/common/: mod.rs  osrelease.rs  progress.rs  report.rs  transaction.rs
crates/miz/src/operations/: database.rs  deptest.rs  files.rs  imagedb.rs  mod.rs  progress.rs  query.rs  remove.rs  sync.rs  transaction.rs  upgrade.rs  version.rs
crates/miz/src/operations/images/: client.rs  describe.rs  format.rs  job.rs  mod.rs  relay.rs
crates/miz/src/render/: completions.rs  confirm.rs  database.rs  deptest.rs  files.rs  fmt.rs  images.rs  mod.rs  palette.rs  progress_indicatif.rs  query.rs  remove.rs  sync.rs  upgrade.rs  version.rs
crates/miz/tests/: cli.rs  cli_spike.rs  database.rs  deptest.rs  files.rs  images.rs  query.rs  remove.rs  sync.rs  upgrade.rs
crates/miz/tests/common/: mod.rs
crates/miz/tests/fixtures/: README.md  uki-cmdline.efi
crates/miz/tests/fixtures/image_db/10-archetype/foo-1.2.3-1/: desc  files
crates/miz/tests/fixtures/image_db/50-extra/baz-2.0-3/: desc
crates/miz/tests/fixtures/layered_db/local/explicitpkg-1.0-1/: desc
crates/miz/tests/fixtures/layered_db/local/implicitpkg-2.0-1/: desc
crates/miz/tests/fixtures/layered_db/local/noreasonpkg-3.0-1/: desc
crates/miz/tests/fixtures/os-release/usr/lib/: os-release
crates/miz/tests/fixtures/root/etc/: miz.toml
crates/mizd/: Cargo.toml
crates/mizd/data/: mizd.service  org.archetype.miz1.conf  org.archetype.miz1.policy  org.archetype.miz1.service
crates/mizd/src/: job.rs  main.rs  manager.rs  polkit.rs  sink.rs  worker.rs
docs/: CORE-SEAM.md  alpm-api-notes.md  mizd-plan.md  refactor-structured-results.md  split-miz-core.md
notes/: miz-build-env.md
packaging/: README.md
packaging/arch/miz/: PKGBUILD
packaging/arch/miz-convert/: PKGBUILD
src/: config.rs  error.rs  exit.rs  main.rs
src/cli/: args.rs  mod.rs
src/operations/: database.rs  files.rs  images.rs  query.rs  remove.rs  sync.rs  transaction.rs  upgrade.rs
tests/: cli_spike.rs  database.rs  files.rs  remove.rs
tests/common/: mod.rs
tests/fixtures/: README.md
tests/fixtures/root/etc/: pacman.conf
