[workspace]
resolver = "2"
members = [
    "crates/miz",
    "crates/miz-convert",
]

# Workspace-wide deps that more than one crate will use. Crates opt in
# per-Cargo.toml via `dep = { workspace = true }`. Versions stay here
# so a bump touches one file instead of N.
[workspace.dependencies]
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
thiserror = "2"
toml      = "0.8"
