[workspace]
resolver = "2"
members = [
    "crates/miz",
    "crates/miz-config",
    "crates/miz-convert",
    "crates/miz-core",
]

# Workspace-wide deps that more than one crate will use. Crates opt in
# per-Cargo.toml via `dep = { workspace = true }`. Versions stay here
# so a bump touches one file instead of N.
[workspace.dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
toml       = "0.8"
zbus       = { version = "5", default-features = false, features = ["blocking-api", "async-io"] }
