[package]
name        = "miz-convert"
version     = "0.1.0"
edition     = "2021"
description = "Convert pacman.conf to miz.toml"
license     = "GPL-2.0-or-later"

[dependencies]
anyhow    = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
toml      = { workspace = true }
