[package]
name        = "miz-convert"
version     = "0.1.0"
edition     = "2021"
description = "Convert pacman.conf to miz.toml"
license     = "GPL-2.0-or-later"

[dependencies]
anyhow      = { workspace = true }
miz-config  = { path = "../miz-config" }
pacmanconf  = "3"
toml        = { workspace = true }

[dev-dependencies]
tempfile = "3"
