[package]
name        = "miz"
version     = "0.1.0"
edition     = "2021"
description = "Package and update manager for the Archetype Linux distribution"
license     = "GPL-2.0-or-later"
build       = "build.rs"

[build-dependencies]
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.2"

[dependencies]
alpm               = "5"
alpm-sys           = "5"
libc               = "0.2"
miz-config         = { path = "../miz-config" }
ctrlc              = { version = "3", features = ["termination"] }
clap               = { version = "4", features = ["derive", "wrap_help"] }
clap_complete      = "4"
thiserror          = { workspace = true }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex              = "1"
indicatif          = "0.17"
serde              = { workspace = true }
toml               = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
