[package]
name        = "miz"
version     = "0.1.0"
edition     = "2021"
description = "Package and update manager for the Archetype Linux distribution"
license     = "GPL-2.0-or-later"
build       = "build.rs"

[build-dependencies]
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.2"

[dependencies]
miz-core           = { path = "../miz-core" }
clap               = { version = "4", features = ["derive", "wrap_help"] }
clap_complete      = "4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif          = "0.17"
console            = "0.15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
